---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
  bundle_name: stateless
  request: "[&mut ref x]: [&mut T]"
---
[&mut ref x] @ s: [&mut T]
// Applying rule `Constructor`
&mut ref x @ s.0: &mut T
// Applying rule `Deref`
ref x @ *s.0: T
// Applying rule `BindingBorrow`
x @ &*s.0: &T
// Applying rule `Binding`
let x: &T = &*s.0

// Final bindings (simplified):
let x: &T = &*s.0;
